# ALG1-Project-Scheduler

./: .gitignore  CMakeLists.txt
docs/: doxyfile
src/: core.cpp  core.hpp  main.cpp
